# rag_chatbot

./: .env  README.md  app.py  pyproject.toml  video.webm
core/: __init__.py  chunker.py  config.py  embedder.py  llm.py  loader.py  memory.py  pipeline.py  prompt.py  store.py
